# CATS-Base-Firmware

./: .gitmodules  CMakeLists.txt  README.md  memmap_2040.ld  version.cmake
src/: commands.c  commands.h  config.h  error.c  error.h  gps.c  gps.h  kiss.c  kiss.h  main.c  pc_iface.c  pc_iface.h  radio.c  radio.h  settings.c  settings.h  shell.c  shell.h  version.h  version.h.in
src/cats/: cats.c
src/drivers/: flash.h  gpio.h  mcu.h  radio.h  serial.h  spi.h  uart.h
src/drivers/common/: flash.h  gpio.h  radio.h  serial.h  spi.h  util.h
src/drivers/radio/: radio_config.h  rf4463.c  rf4463.h
src/drivers/rf4463/: rf4463.c
src/drivers/rp2040/: flash.c  gpio.c  mcu.c  serial.c  spi.c  uart.c  util.c
